fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 .main {
   position: relative;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,9 +25,9 @@ body {
   background-color: #f5f7fb;
   width: 100%;
   max-width: 1024px;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
-  padding: 50px 15px;
+  padding: 40px 15px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
